--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- ==============================================
 		Favicons
 		=============================================== -->
-		<link rel="shortcut icon" href="assets/images/favicon.ico">
+		<link rel="shortcut icon" href="assets/images/favicon.jpg">
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/flexslider.css">
-		<link rel="stylesheet" href="assets/css/styles.css">
+		<link rel="stylesheet" href="assets/css/styles-8.css">
 
 		<!-- ==============================================
 		Fonts
@@ -61,7 +61,7 @@
 					</button>
 
 					<!-- ======= LOGO ========-->
-					<a class="navbar-brand scrollto" href="#home"><img src="assets/images/logo.png" alt=""/>Brian Gordon</a>
+					<a class="navbar-brand scrollto" href="#home"><img src="assets/images/logo.png" alt=""/>J Brian Gordon</a>
 
 				</div>
 
@@ -492,14 +492,14 @@
 		<script>
 
 			var mapPoint = {
-					'lat': 40.720099,
-					'lng': -74.005764,
-					'zoom' : 15,
-					'infoText':'<p>250 W Broadway\
-								<br/>New York\
-								<br/>NY 10013</p>',
+					'lat': 34.138022,
+					'lng': -117.8680081,
+					'zoom' : 13,
+					'infoText':'<p>Oh yes,\
+								<br/>I am willing\
+								<br/>to drive</p>',
 					'linkText':'View on Google Maps',
-					'mapAddress':'250 W Broadway, New York, NY 10013',
+					'mapAddress':'Glendora, CA 91740',
 					'icon': 'assets/images/pin-dark.png'
 				};
 
