update portfolio section

--- a/index.html
+++ b/index.html
@@ -245,20 +245,21 @@
 
 				<h1 class="big-text text-center scrollimation fade-in">My Works</h1>
 
+
 				<!--==== Portfolio Filters ====-->
 				<div id="filter-works">
 					<ul>
 						<li class="active scrollimation fade-right d1">
-							<a href="#" data-filter="*">All</a>
+							<a href="#" data-filter="*"></a>
 						</li>
 						<li class="scrollimation fade-right">
-							<a href="#" data-filter=".identity">Identity</a>
+							<a href="#" data-filter=".identity"></a>
 						</li>
 						<li class="scrollimation fade-left">
-							<a href="#" data-filter=".logo">Logo</a>
+							<a href="#" data-filter=".logo"></a>
 						</li>
 						<li class="scrollimation fade-left d1">
-							<a href="#" data-filter=".illustration">Illustration</a>
+							<a href="#" data-filter=".illustration"></a>
 						</li>
 					</ul>
 				</div><!--End portfolio filters -->
@@ -287,21 +288,21 @@
 					=============================================== -->
 					<article class="project-item illustration">
 
-						<img class="img-responsive project-image" src="assets/images/thumb.png"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/images/Goturbac.png"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
 							<h2 class="project-title">GoturBAC</h2><!--Project Title -->
-							<p>Web App</p><!--Project Subtitle -->
+							<p>Phone/Web App</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/slide.png,assets/images/slide.png" >
+						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/goturbac2.png" >
 
 							<p>GoturBAC is web app I designed to give an estimate for a users BAC level, based on calculations run by the app. I created it in anticipation of a graduation party, to help people have an idea of just how intoxicated they may be.</p>
 							<p>One feature I decided to add were the "Preferred BAC" setting. The user, once they hit a point where they feel good but haven't gone overboard, can set a preferred BAC that they can refer to in the future, so they'll know their sweet spot on just how much is enough. Nobody likes to go overboard.</p>
 							<p>For this app I wanted to create a relational model between the users and the drinks, and hand roll my own authentication. I used RoR for the backend, and PostgreSQL for the database. Most of the styling is done using Zurb Foundation. </p>
-							<p class="text-center"><a class="btn btn-color1" href="#external-link"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
+							<p class="text-center"><a class="btn btn-color1" href="http://goturbac.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
 
 						</div>
 
@@ -312,7 +313,7 @@
 
 					<article class="project-item identity logo">
 
-						<img class="img-responsive project-image" src="assets/images/thumb.png"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/images/whattire.png"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
 							<h2 class="project-title">WhAttire</h2><!--Project Title -->
@@ -321,13 +322,13 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/slide.png,assets/images/slide.png" >
+						<div class="sr-only project-description" data-images="assets/images/whattire.png,assets/images/whattire2.png" >
 
 							<p>WhAttire was a group project I did with some of my very talented classmates in General Assembly.</p>
 
 							<p>Our idea was to create an app similar to Yelp, but with a focus on proper attire and dress codes. It can be difficult to tell what is appropriate to wear to a venue you've never been to, and it's embarassing to be over or underdressed. Yelp doesn't seem to provide much in the way of answers, and even when it does give a dress code, it's usually pretty vague. WhAttire is the solution to that problem.</p>
 							<p>My main focus on this project was to handle a lot of the frontend. In particular I'm proud of the splashdown page, which was my first attempt at parallax scrolling. This was also a great experience in learning how to work as a team over Github, and I got tons of experience with branching and pull requests from this project.</p>
-							<p class="text-right"><a class="btn btn-color1" href="#external-link"><i class="fa fa-dribbble"></i>View on Dribbble</a></p>
+							<p class="text-center"><a class="btn btn-color1" href="http://whattire.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
 
 						</div>
 
@@ -335,7 +336,7 @@
 
 					<article class="project-item illustration">
 
-						<img class="img-responsive project-image" src="assets/images/thumb.png"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/images/CineSync.png"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
 							<h2 class="project-title">CineSync</h2><!--Project Title -->
@@ -344,11 +345,12 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/slide.png,assets/images/slide.png" >
+						<div class="sr-only project-description" data-images="assets/images/CineSync.png,assets/images/CineSync2.png" >
 
 							<p>CineSync is my first real Web App, and it's one that I'd still like to put a lot more work into. The internet already has a few review amalgamation sites like Rotten Tomatoes and Metacritic, but sometimes even these sites aren't terribly helpful. Maybe you hate the movies critics tend to clamor over, or maybe you like horror movies but they always seem to get bad reviews.</p>
 							<p>The idea for CineSync is that instead of searching through critics reviews, you can find users whose taste in movies align more with your own. This would make it easier to find new movies that you'll love, and avoid movies that you'd hate. You can follow users and read reviews that appeal to who you are as a movie goer, and even write your own and develop a following of like minded cinephiles.</p>
 							<p>CineSync was my first use of an API, in this case the Rotten Tomatoes API.  They styling is done using Bootstrap 3, and the backend is Ruby on Rails. For the database, I used Mongo.</p>
+							<p class="text-center"><a class="btn btn-color1" href="http://cinesync.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
 
 						</div>
 
@@ -356,7 +358,7 @@
 
 					<article class="project-item identity">
 
-						<img class="img-responsive project-image" src="assets/images/thumb.png"  alt=""><!--Project thumb -->
+						<img class="img-responsive project-image" src="assets/images/tictactoe.png"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
 							<h2 class="project-title">Tic Tac Toe</h2><!--Project Title -->
@@ -365,12 +367,11 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/slide.png,assets/images/slide.png" >
+						<div class="sr-only project-description" data-images="assets/images/tictactoe.png,assets/images/tictactoe2.png" >
 
 							<p>For our first project at General Assembly, we were instructed to create a game of Tic Tac Toe. Other than creating a game that followed the rules of Tic Tac Toe, we could design the game any way we wanted to, primarily using JavaScript (Angular JS), and CSS.</p>
 
 							<p>For my version, I wanted to create something both fun and kind of weird. I went with a "Bateman vs. Batman" theme, and added some celebration gifs at the end depending on the winner. This was a fun way to learn JS and CSS, along with game logic.</p>
-							<p class="text-right"><a class="btn btn-color1" href="#external-link"><i class="fa fa-dribbble"></i>View on Dribbble</a></p>
 						</div>
 
 					</article><!--End Project Item -->
@@ -381,6 +382,8 @@
 
 
 		</section>
+
+
 
 		<!-- ==============================================
 		CONTACT
@@ -395,9 +398,9 @@
 
 						<h1 class="big-text">Contact Me</h1>
 
-						<p class="lead">I am available for freelance. Can't wait for the next exciting project! Could be yours?</p>
+						<p class="lead">New blood itching for work. Let's build something.</p>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt, dui ac porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt, dui ac porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt, dui ac porta.</p>
+						<p>You're looking for a developer, and I'm looking for a job. Let me know who you are, what your company does, and what you're looking for in a dev. I'll get back to you in a ridiculously prompt manner.</p>
 
 					</div>
 
@@ -408,7 +411,7 @@
 						<div class="form-group">
 						  <label class="control-label" for="contact-name">Name</label>
 						  <div class="controls">
-							<input id="contact-name" name="contactName" placeholder="Your name" class="form-control requiredField" data-new-placeholder="Your name" type="text" data-error-empty="Please enter your name">
+							<input id="contact-name" name="contactName" placeholder="Who you are" class="form-control requiredField" data-new-placeholder="Your name" type="text" data-error-empty="Need a name">
 							<i class="fa fa-user"></i>
 						  </div>
 						</div><!-- End name input -->
@@ -416,7 +419,7 @@
 						<div class="form-group">
 						  <label class="control-label" for="contact-mail">Email</label>
 						  <div class=" controls">
-							<input id="contact-mail" name="email" placeholder="Your email" class="form-control requiredField" data-new-placeholder="Your email" type="email" data-error-empty="Please enter your email" data-error-invalid="Invalid email address">
+							<input id="contact-mail" name="email" placeholder="Your email" class="form-control requiredField" data-new-placeholder="Your email" type="email" data-error-empty="Need an email" data-error-invalid="email is invalid. Try again.">
 							<i class="fa fa-envelope"></i>
 						  </div>
 						</div><!-- End email input -->
@@ -424,12 +427,12 @@
 						<div class="form-group">
 						  <label class="control-label" for="contact-message">Message</label>
 							<div class="controls">
-								<textarea id="contact-message" name="comments"  placeholder="Your message" class="form-control requiredField" data-new-placeholder="Your message" rows="6" data-error-empty="Please enter your message"></textarea>
+								<textarea id="contact-message" name="comments"  placeholder="Tell me something" class="form-control requiredField" data-new-placeholder="Your message" rows="6" data-error-empty="Please enter SOMETHING at least!"></textarea>
 								<i class="fa fa-comment"></i>
 							</div>
 						</div><!-- End textarea -->
 
-						<p><button name="submit" type="submit" class="btn btn-color2 btn-block" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-paper-plane"></i>Send Message</button></p>
+						<p><button name="submit" type="submit" class="btn btn-color2 btn-block" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Sent! I'll respond shortly"><i class="fa fa-paper-plane"></i>Send Message</button></p>
 						<input type="hidden" name="submitted" id="submitted" value="true" />
 
 					</form><!-- End contact-form -->
@@ -458,15 +461,8 @@
 			<div class="container">
 
 				<ul class="social-links text-center">
-					<li><a href="#link"><i class="fa fa-twitter fa-fw"></i></a></li>
-					<li><a href="#link"><i class="fa fa-facebook fa-fw"></i></a></li>
-					<li><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li>
-					<li><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li>
-					<li><a href="#link"><i class="fa fa-linkedin fa-fw"></i></a></li>
+					<li><a href="www.linkedin.com/in/jbriangordon/"><i class="fa fa-linkedin fa-fw"></i></a></li>
 				</ul>
-
-				<p class="text-center">&copy; 2014 - All rights reserved</p>
-				<p class="text-center"><a href="https://wrapbootstrap.com/user/qthemes" target="_blank">Made by Qthemes</a></p>
 
 			</div>
 
