--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@
 			<div class="container">
 
 				<ul class="social-links text-center">
-					<li><a href="www.linkedin.com/in/jbriangordon/"><i class="fa fa-linkedin fa-fw"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/jbriangordon"><i class="fa fa-linkedin fa-fw"></i></a></li>
+					<li><a href="https://github.com/JBrianGordon"><i class="fa fa-github fa-fw"></i></a></li>
 				</ul>
 
 			</div>
