--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 							<a href="#home" class="scrollto">Home</a>
 						</li>
 						<li>
-							<a href="#services" class="scrollto">What I Do</a>
+							<a href="#services" class="scrollto">Why I Code</a>
 						</li>
 						<li>
-							<a href="#about" class="scrollto">About Me</a>
+							<a href="#about" class="scrollto">Who I Am</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="scrollto">My Works</a>
+							<a href="#portfolio" class="scrollto">What I've Done</a>
 						</li>
 						<li>
 							<a href="#contact" class="scrollto">Contact Me</a>
@@ -96,11 +96,11 @@
 
 			<div class="container text-center">
 
-				<p>Welcome to</p>
+				<p>Web Developer</p>
 
 				<h1>J Brian Gordon</h1>
 
-				<p>Please give this guy money</p>
+				<p>Who I am and what I do</p>
 
 			</div>
 
@@ -113,39 +113,39 @@
 
 			<div class="container">
 
-				<h1 class="section-title big-text scrollimation fade-up">I am a unique snowflake</h1>
+				<h1 class="section-title big-text scrollimation fade-up">Why I Code</h1>
 
 				<div class="row">
 
 					<div class="col-sm-4 service-item color3 scrollimation scale-in">
 
-						<div class="service-icon"><i class="fa fa-youtube"></i></div>
+						<div class="service-icon"><i class="fa fa-wrench"></i></div>
 
-						<h3>Completely Unmotivated</h3>
+						<h3>Problem Solving Obsessive</h3>
 
-						<p>I spend an alarming amount of time just sitting around looking up random things on the internet, rather than expanding my mind or improving upon any sort of useful skills. Part of it is just how damn hot it's been, but I'm worried that even when the cold weather kicks in, I'll still find myself content to be useless.</p>
+						<p>Problems aren't a headache, they're a learning experience. I love development because I love searching for solutions. Nothing engages me more than having something that needs to be fixed. While TDD and wireframing can be good for spotting issues ahead of time, there are always issues that arise, and I can't wait to tackle them.</p>
 
 
 					</div>
 
 					<div class="col-sm-4 service-item color1 scrollimation scale-in d1">
 
-						<div class="service-icon"><i class="fa fa-desktop "></i></div>
+						<div class="service-icon"><i class="fa fa-level-up"></i></div>
 
-						<h3>Web Design</h3>
+						<h3>Gotta Get The Level Up</h3>
 
-						<p>Although I do still find a lot of Web Design to be fascinating, I suspect it's an industry that is dominated by over privileged hipsters all scrambling to suck on Apple Corporations tit. I constantly my myself loving the presentation of websites, and despising the content.</p>
+						<p>There's so much to learn when it comes to code, and no one could ever learn it all. Even in some of the more basic tutorials out there, I always seem to learn something new. One of the greatest things about development for me is that the learning never stops, and there's always something new on the horizon to study.</p>
 
 
 					</div>
 
 					<div class="col-sm-4 service-item color2 scrollimation scale-in d2">
 
-						<div class="service-icon"><i class="fa fa-gamepad"></i></div>
+						<div class="service-icon"><i class="fa fa-flash"></i></div>
 
-						<h3>Games Forever</h3>
+						<h3>Constant Source of Inspiration</h3>
 
-						<p>My greatest distraction is gaming, and I can't shake the feeling that if I should have pursued a career in game design over web design. This field is far too much interior design, and not enough about building the god damn house.</p>
+						<p>There's not a lot in life more exciting then being struck with inspiration. Coming up with an idea that's never been done, or discovering a creative way to make something old new again. Coding gives you those moments more than any other field I know, and it's those moments of novelty and random illumination that I strive for.</p>
 
 					</div>
 
@@ -172,11 +172,11 @@
 
 					<div class="col-sm-6 scrollimation fade-left d3">
 
-						<h1 class="big-text">I am <br/>Brian Gordon </h1>
+						<h1 class="big-text">I'm <br/>Brian Gordon </h1>
 
-						<p class="lead">I am Brian Gordon, a Full Stack Web Developer from Glendora, CA. I work primarily with Ruby on Rails, JavaScript, HTML and CSS. I've also got a bit of practice in with Bootstrap and Foundation, jQuery, PostgreSQL and Mongo.</p>
+						<p class="lead">A Full Stack Web Developer from Glendora, CA. I work primarily with Ruby on Rails, JavaScript, HTML and CSS. I've also got a bit of practice in with Bootstrap and Foundation, jQuery, PostgreSQL and Mongo.</p>
 
-						<p>I'm a novel thinker, and strive to not use words in my resume like "passionate", "fast-learner" or "qualified". I think the best way to not create a product that is easily forgotten is to always struggle against hyperbole. I want to build things that no one has ever seen before.</p>
+						<p>I insist on not using clich&eacuted words in my resume like "passionate", "fast-learner" or "multi-tasker". I want to build things that no one has ever seen before. I want to create content that people want to come back to again and again. My goal is to make apps that are so easy and natural for people to use, they've mastered it within a day and made it a normal part of their life without realizing it.</p>
 
 					</div>
 
@@ -197,11 +197,11 @@
 
 					<div class="col-sm-6 col-md-5 text-right scrollimation fade-up d1">
 
-						<h1 class="big-text">Some<br/>random percentages! </h1>
+						<h1 class="big-text">My Skills as<br/>I currently rank them</h1>
 
-						<p class="lead">For some reason a lot of developers like to assign their skillset some arbitrary percentages. As far as I can tell these numbers are always self determined, and I can't think of a time anyone has ever given themself less than a 60% EVER.</p>
+						<p class="lead">I get the most joy working on the backend, but frontend development certainly has its perks as well. These are the skills I'm most focused on at the moment, and the most comfortable with. However, I'm always open to learn something new, and find ways to push myself further.</p>
 
-						<p>But already I've said too much. I should probably work on being less verbose.</p>
+						<p>Of course it can be hard to grade yourself. My portfolio below should provide some more insight into my skill level.</p>
 
 					</div>
 
@@ -210,20 +210,20 @@
 						<div class="skills-bars">
 
 							<div class="skills-item skill1">
-								<span class="percent" data-percent="80">99%</span>
+								<span class="percent" data-percent="100">1st</span>
 								<p>RoR</p>
 							</div>
 							<div class="skills-item skill2">
-								<span class="percent" data-percent="60">io%</span>
-								<p>JavaScript</p>
+								<span class="percent" data-percent="80">2nd</span>
+								<p>HTML/CSS</p>
 							</div>
 							<div class="skills-item skill3">
-								<span class="percent" data-percent="80">:)</span>
-								<p>HTML</p>
+								<span class="percent" data-percent="75">3rd</span>
+								<p>JavaScript</p>
 							</div>
 							<div class="skills-item skill4">
-								<span class="percent" data-percent="60"><=></span>
-								<p>CSS</p>
+								<span class="percent" data-percent="60">4th</span>
+								<p>Photoshop</p>
 							</div>
 
 						</div>
@@ -243,7 +243,7 @@
 
 			<div class="container">
 
-				<h1 class="big-text text-center scrollimation fade-in">My Works</h1>
+				<h1 class="big-text text-center scrollimation fade-in">What I've Done</h1>
 
 
 				<!--==== Portfolio Filters ====-->
@@ -299,10 +299,10 @@
 
 						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/goturbac2.png" >
 
-							<p>GoturBAC is web app I designed to give an estimate for a users BAC level, based on calculations run by the app. I created it in anticipation of a graduation party, to help people have an idea of just how intoxicated they may be.</p>
-							<p>One feature I decided to add were the "Preferred BAC" setting. The user, once they hit a point where they feel good but haven't gone overboard, can set a preferred BAC that they can refer to in the future, so they'll know their sweet spot on just how much is enough. Nobody likes to go overboard.</p>
-							<p>For this app I wanted to create a relational model between the users and the drinks, and hand roll my own authentication. I used RoR for the backend, and PostgreSQL for the database. Most of the styling is done using Zurb Foundation. </p>
-							<p class="text-center"><a class="btn btn-color1" href="http://goturbac.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
+							<p>GoturBAC is web app I designed to give an estimate for a users BAC level, based on a BAC calculator I built in Ruby. I created it in anticipation of a graduation party, to help people have an idea of just how intoxicated they may be.</p>
+							<p>One feature I decided to add was the "Preferred BAC" setting. The user, once they hit a point where they feel good but haven't gone overboard, can set a preferred BAC that they can refer to in the future, so they'll know their sweet spot on just how much is enough. Nobody likes to go overboard.</p>
+							<p>For this app I wanted to create a relational model between the users and the drinks, and hand roll my own authentication. I used RoR for the backend, and PostgreSQL for the database. Most of the styling is done using Zurb Foundation. It's best to check this one out on your phone, but the styling is responsive to all screens.</p>
+							<p class="text-center"><a class="btn btn-color1" href="http://goturbac.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit App Page</a></p>
 
 						</div>
 
@@ -349,7 +349,7 @@
 
 							<p>CineSync is my first real Web App, and it's one that I'd still like to put a lot more work into. The internet already has a few review amalgamation sites like Rotten Tomatoes and Metacritic, but sometimes even these sites aren't terribly helpful. Maybe you hate the movies critics tend to clamor over, or maybe you like horror movies but they always seem to get bad reviews.</p>
 							<p>The idea for CineSync is that instead of searching through critics reviews, you can find users whose taste in movies align more with your own. This would make it easier to find new movies that you'll love, and avoid movies that you'd hate. You can follow users and read reviews that appeal to who you are as a movie goer, and even write your own and develop a following of like minded cinephiles.</p>
-							<p>CineSync was my first use of an API, in this case the Rotten Tomatoes API.  They styling is done using Bootstrap 3, and the backend is Ruby on Rails. For the database, I used Mongo.</p>
+							<p>CineSync was my first use of an API, in this case the Rotten Tomatoes API.  The styling is done using Bootstrap 3, and the backend is Ruby on Rails. For the database, I used Mongo.</p>
 							<p class="text-center"><a class="btn btn-color1" href="http://cinesync.herokuapp.com/"><i class="fa fa-arrow-right"></i>Visit Website</a></p>
 
 						</div>
@@ -369,7 +369,7 @@
 
 						<div class="sr-only project-description" data-images="assets/images/tictactoe.png,assets/images/tictactoe2.png" >
 
-							<p>For our first project at General Assembly, we were instructed to create a game of Tic Tac Toe. Other than creating a game that followed the rules of Tic Tac Toe, we could design the game any way we wanted to, primarily using JavaScript (Angular JS), and CSS.</p>
+							<p>For our first project at General Assembly, we were instructed to create a game of Tic Tac Toe. Other than creating a game that followed the basic rules, we could design the game any way we wanted to, primarily using JavaScript (Angular JS), and CSS.</p>
 
 							<p>For my version, I wanted to create something both fun and kind of weird. I went with a "Bateman vs. Batman" theme, and added some celebration gifs at the end depending on the winner. This was a fun way to learn JS and CSS, along with game logic.</p>
 						</div>
@@ -427,7 +427,7 @@
 						<div class="form-group">
 						  <label class="control-label" for="contact-message">Message</label>
 							<div class="controls">
-								<textarea id="contact-message" name="comments"  placeholder="Tell me something" class="form-control requiredField" data-new-placeholder="Your message" rows="6" data-error-empty="Please enter SOMETHING at least!"></textarea>
+								<textarea id="contact-message" name="comments"  placeholder="Leave me a message" class="form-control requiredField" data-new-placeholder="Your message" rows="6" data-error-empty="Please enter SOMETHING at least!"></textarea>
 								<i class="fa fa-comment"></i>
 							</div>
 						</div><!-- End textarea -->
