--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
 					'lng': -117.8680081,
 					'zoom' : 13,
 					'infoText':'<p>Oh yes,\
-								<br/>I am willing\
-								<br/>to drive</p>',
+								<br/>I am more than\
+								<br/>willing to drive</p>',
 					'linkText':'View on Google Maps',
 					'mapAddress':'Glendora, CA 91740',
 					'icon': 'assets/images/pin-dark.png'
