update portfolio photos

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -297,7 +297,7 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/Goturbac2.png" >
+						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/goturbac2.png" >
 
 							<p>GoturBAC is web app I designed to give an estimate for a users BAC level, based on a BAC calculator I built in Ruby. I created it in anticipation of a graduation party, to help people have an idea of just how intoxicated they may be.</p>
 							<p>One feature I decided to add was the "Preferred BAC" setting. The user, once they hit a point where they feel good but haven't gone overboard, can set a preferred BAC that they can refer to in the future, so they'll know their sweet spot on just how much is enough. Nobody likes to go overboard.</p>
@@ -345,7 +345,7 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/CineSync.png,assets/images/Cinesync2.png" >
+						<div class="sr-only project-description" data-images="assets/images/CineSync.png,assets/images/CineSync2.png" >
 
 							<p>CineSync is my first real Web App, and it's one that I'd still like to put a lot more work into. The internet already has a few review amalgamation sites like Rotten Tomatoes and Metacritic, but sometimes even these sites aren't terribly helpful. Maybe you hate the movies critics tend to clamor over, or maybe you like horror movies but they always seem to get bad reviews.</p>
 							<p>The idea for CineSync is that instead of searching through critics reviews, you can find users whose taste in movies align more with your own. This would make it easier to find new movies that you'll love, and avoid movies that you'd hate. You can follow users and read reviews that appeal to who you are as a movie goer, and even write your own and develop a following of like minded cinephiles.</p>
