Update goturbac pics

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 						<!--==== Project Preview HTML ====-->
 
-						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/Goturbac2.png" >
+						<div class="sr-only project-description" data-images="assets/images/Goturbac.png,assets/images/goturbac2.png" >
 
 							<p>GoturBAC is web app I designed to give an estimate for a users BAC level, based on a BAC calculator I built in Ruby. I created it in anticipation of a graduation party, to help people have an idea of just how intoxicated they may be.</p>
 							<p>One feature I decided to add was the "Preferred BAC" setting. The user, once they hit a point where they feel good but haven't gone overboard, can set a preferred BAC that they can refer to in the future, so they'll know their sweet spot on just how much is enough. Nobody likes to go overboard.</p>
