video header with test footage

--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
 		<!-- ==============================================
 		HEADER
 		=============================================== -->
+
+		<!--[if lt IE 9]>
+		<script>
+		document.createElement('video');
+		</script>
+		<![endif]-->
+
+		<video autoplay loop poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
+		<source src="assets/images/polina.webm" type="video/webm">
+		<source src="assets/images/polina.mp4" type="video/mp4">
+		</video>
+
 		<header id="home">
 
 			<div class="container text-center">
@@ -499,6 +511,28 @@
 					'mapAddress':'Glendora, CA 91740',
 					'icon': 'assets/images/pin-dark.png'
 				};
+
+				var vid = document.getElementById("bgvid");
+var pauseButton = document.getElementById("vidpause");
+function vidFade() {
+vid.classList.add("stopfade");
+}
+vid.addEventListener('ended', function() {
+// only functional if "loop" is removed
+vid.pause();
+// to capture IE10
+vidFade();
+});
+pauseButton.addEventListener("click", function() {
+vid.classList.toggle("stopfade");
+if (vid.paused) {
+vid.play();
+pauseButton.innerHTML = "Pause";
+} else {
+vid.pause();
+pauseButton.innerHTML = "Paused";
+}
+})
 
 		</script>
 
