video header with original footage

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 		</script>
 		<![endif]-->
 
-		<video autoplay loop poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
-		<source src="assets/images/polina.webm" type="video/webm">
-		<source src="assets/images/polina.mp4" type="video/mp4">
+		<video autoplay loop poster="../HTML/assets/images/header-bg.jpg" id="bgvid">
+		<source src="assets/images/Brian-Header-DeFocused-Graded.webm" type="video/webm">
+		<source src="assets/images/Brian-Header-DeFocused-Graded.m4v" type="video/mp4">
 		</video>
 
 		<header id="home">
@@ -512,27 +512,6 @@
 					'icon': 'assets/images/pin-dark.png'
 				};
 
-				var vid = document.getElementById("bgvid");
-var pauseButton = document.getElementById("vidpause");
-function vidFade() {
-vid.classList.add("stopfade");
-}
-vid.addEventListener('ended', function() {
-// only functional if "loop" is removed
-vid.pause();
-// to capture IE10
-vidFade();
-});
-pauseButton.addEventListener("click", function() {
-vid.classList.toggle("stopfade");
-if (vid.paused) {
-vid.play();
-pauseButton.innerHTML = "Pause";
-} else {
-vid.pause();
-pauseButton.innerHTML = "Paused";
-}
-})
 
 		</script>
 
