mobile fix no video

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</script>
 		<![endif]-->
 
-		<video autoplay loop poster="../HTML/assets/images/header-bg.jpg" id="bgvid">
+		<video autoplay loop poster="assets/images/header-bg.jpg" id="bgvid">
 		<source src="assets/images/Brian-Header-DeFocused-Graded.webm" type="video/webm">
 		<source src="assets/images/Brian-Header-DeFocused-Graded.m4v" type="video/mp4">
 		</video>
